--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A boilerplate project to write, test and deploy Solidity smart contracts in JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/ilya-moskovtsev/smart-contracts-js#readme",
   "dependencies": {
-    "solc": "^0.4.17"
+    "ganache-cli": "^6.12.2",
+    "mocha": "^9.1.1",
+    "solc": "^0.4.17",
+    "web3": "^1.3.5"
   }
 }
